--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,75 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css"
+            integrity="sha512-UuQ/zJlbMVAw/UU8vVBhnI4op+/tFOpQZVT+FormmIEhRSCnJWyHiBbEVgM4Uztsht41f3FzVWgLuwzUqOObKw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+            integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include 'partials/header.html.twig' %}
+
+        {% block hero_section %}
+            
+        {% endblock %}
+
+        <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 hidden">
+            <div class="absolute top-0 left-0 w-64 h-full bg-white shadow-lg p-4">
+                <button id="close-button" class="text-gray-700 focus:outline-none">
+                    <ion-icon name="close"></ion-icon>
+                </button>
+                <ul class="mt-10 flex flex-col gap-8 w-full">
+                    <li class="w-full hover:bg-firstColor px-8 py-1">
+                        <a href="/">Acceuil</a>
+                    </li>
+                    <li class="w-full hover:bg-firstColor px-8 py-1">
+                        <a href="/boutique.html">Boutique</a>
+                    </li>
+                    <li class="w-full hover:bg-firstColor px-8 py-1">
+                        <a href="/about.html">A Propos</a>
+                    </li>
+                    <li class="w-full hover:bg-firstColor px-8 py-1">
+                        <a href="/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        {% block body %}
+        
+        {% endblock %}
+
+        {% include 'partials/footer.html.twig' %}
+
+        <script src="{{ asset('scripts/script.js') }}"></script>
+        <!--
+            - ionicon link
+        -->
+        <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script
+            nomodule
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+        ></script>
     </body>
 </html>
