--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -14,16 +14,16 @@
                 <h3 class="text-xl font-semibold mb-4">Liens rapides</h3>
                 <ul>
                     <li class="mb-2">
-                    <a href="#" class="hover:text-slate-500">Accueil</a>
+                    <a href="/" class="hover:text-slate-500">Accueil</a>
                     </li>
                     <li class="mb-2">
-                    <a href="#" class="hover:text-slate-500">Boutique</a>
+                    <a href="{{ path('app_shop') }}" class="hover:text-slate-500">Boutique</a>
                     </li>
                     <li class="mb-2">
-                    <a href="#" class="hover:text-slate-500">Apropos</a>
+                    <a href="{{ path('app_about') }}" class="hover:text-slate-500">Apropos</a>
                     </li>
                     <li>
-                    <a href="#" class="hover:text-slate-500">Contact</a>
+                    <a href="{{ path('app_contact') }}" class="hover:text-slate-500">Contact</a>
                     </li>
                 </ul>
             </div>
