--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,307 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block hero_section %}
     {% include 'partials/hero-section.html.twig' %}
 {% endblock %}
 
 {% block body %}
-        
+    <!--
+      PRODUCT GRID
+    -->
+    <div class="mb-8 p-7">
+      <h2 class="text-2xl font-semibold mb-6">Nouveaux Produits</h2>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/cstm-2.jpeg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/cstm-1.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">30.000 FCFA</span>
+              <del class="text-gray-500 ml-2">45.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/im0.jpg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/im01.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">35.000 FCFA</span>
+              <del class="text-gray-500 ml-2">49.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/im1.jpeg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/im11.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">28.000 FCFA</span>
+              <del class="text-gray-500 ml-2">39.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/im2.jpg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/im22.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">18.000 FCFA</span>
+              <del class="text-gray-500 ml-2">23.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/im2.jpg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/im22.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">18.000 FCFA</span>
+              <del class="text-gray-500 ml-2">23.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+
+        <div class="border rounded-lg overflow-hidden">
+          <!--SHOWCASE BANNER-->
+          <div class="relative showcase">
+            <img
+              src="/im2.jpg"
+              alt="Mens Winter Leathers Jackets"
+              width="300"
+              class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+            />
+            <img
+              src="/im22.jpg"
+              alt="Mens Winter Leathers Jackets"
+              class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+            />
+
+            <p
+              class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
+            >
+              15%
+            </p>
+
+            <div
+              class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2"
+            >
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="eye-outline"></ion-icon>
+              </button>
+
+              <button class="btn-action bg-white rounded-full p-2">
+                <ion-icon name="bag-add-outline"></ion-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="p-4">
+            <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+
+            <a href="{{ path('app_product_detail') }}">
+              <h3 class="text-lg font-semibold">COSTUME AFRICAIN SUPER 120</h3>
+            </a>
+
+            <div class="mt-2">
+              <span class="text-xl font-bold">18.000 FCFA</span>
+              <del class="text-gray-500 ml-2">23.000 FCFA</del>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
