--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -59,9 +59,12 @@
             <button id="search-button" class="md:hidden">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </button>
-            <a href="/login.html" id="user-button">
-                <i class="fa fa-user-circle" aria-hidden="true"></i>
-            </a>
+            {% if app.user %}
+                <a href="{{ path('app_logout') }}" id="user-button">
+                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                </a>
+            {% endif %}
+            
             <a href="{{ path('app_cart') }}" class="relative">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <span
