--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -64,6 +64,9 @@
                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                 </a>
             {% endif %}
+            <a href="{{ path('app_logout') }}" id="user-button">
+                <i class="fa fa-user-circle" aria-hidden="true"></i>
+            </a>
             
             <a href="{{ path('app_cart') }}" class="relative">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
