--- a/templates/partials/hero-section.html.twig
+++ b/templates/partials/hero-section.html.twig
@@ -4,85 +4,33 @@
         id="carousel"
         class="h-full w-max flex transition-all ease-in-out duration-100 carousel -z-10"
       >
-        <div
-          class="w-screen h-full flex items-center justify-around py-8 relative -z-10"
-        >
-          <img src="/cstm-1.jpg" alt="" class="absolute left-0 -z-10 h-full" />
-          <div
-            class="flex flex-col items-center justify-center bg-[#00000046] text-white p-4 -z-10"
+        {% if (header_promos != null) %}
+          {% for item in header_promos %}
+            <div
+            class="w-screen h-full flex items-center justify-around py-8 relative -z-10"
           >
-            <h3 class="font-semibold text-lg">
-              De nouveaux Costumes pour Homme
-            </h3>
-            <p>Profiter pour une promotion de -30%</p>
-            <button
-              class="px-24 py-3 my-5 text-black bg-white hover:bg-black hover:text-white"
+            <img src="{{ asset('/images/upload/') }}{{ item.leftImage }}" alt="" class="absolute left-0 -z-10 h-full" />
+            <div
+              class="flex flex-col items-center justify-center bg-[#00000046] text-white p-4 -z-10"
             >
-              Voir
-            </button>
+              <h3 class="font-semibold text-lg">
+                {{ item.title }}
+              </h3>
+              <p>{{ item.description }}</p>
+              <a href="{{ item.link }}"
+                class="px-24 py-3 my-5 text-black bg-white hover:bg-black hover:text-white"
+              >
+                Voir
+              </a>
+            </div>
+            <img
+              src="{{ asset('/images/upload/') }}{{ item.rightImage }}"
+              alt=""
+              class="absolute right-0 -z-20 h-full max-md:hidden max-lg:-right-24"
+            />
           </div>
-          <img
-            src="https://keyfaworld.com/web/image/product.image/140/image?unique=4ab945a"
-            alt=""
-            class="absolute right-0 -z-20 h-full max-md:hidden max-lg:-right-24"
-          />
-        </div>
-
-        <div
-          class="w-screen h-full flex items-center justify-around py-8 relative -z-10"
-        >
-          <img
-            src="https://m.media-amazon.com/images/I/617Pf1ZGFtL.jpg"
-            alt=""
-            class="absolute left-0 -z-10 h-full"
-          />
-          <div
-            class="flex flex-col items-center justify-center bg-[#00000046] text-white p-4 -z-10"
-          >
-            <h3 class="font-semibold text-lg">
-              De nouveaux Costumes pour Homme
-            </h3>
-            <p>Profiter pour une promotion de -30%</p>
-            <button
-              class="px-24 py-3 my-5 text-black bg-white hover:bg-black hover:text-white"
-            >
-              Voir
-            </button>
-          </div>
-          <img
-            src="https://sc04.alicdn.com/kf/Hb0e1c2270d73448581cd31be761edbd6U.jpg"
-            alt=""
-            class="absolute right-0 -z-20 h-full max-md:hidden max-lg:-right-24"
-          />
-        </div>
-
-        <div
-          class="w-screen h-full flex items-center justify-around py-8 relative -z-10"
-        >
-          <img
-            src="https://cdn.shopify.com/s/files/1/0527/3721/2585/products/costume-boubou-africain.jpg?v=1630230481"
-            alt=""
-            class="absolute left-0 -z-10 h-full"
-          />
-          <div
-            class="flex flex-col items-center justify-center bg-[#00000046] text-white p-4 -z-10"
-          >
-            <h3 class="font-semibold text-lg">
-              De nouveaux Costumes pour Homme
-            </h3>
-            <p>Profiter pour une promotion de -30%</p>
-            <button
-              class="px-24 py-3 my-5 text-black bg-white hover:bg-black hover:text-white"
-            >
-              Voir
-            </button>
-          </div>
-          <img
-            src="https://boutique-africaine.com/cdn/shop/products/boubou-africain-costume_1200x1200.jpg?v=1630230491"
-            alt=""
-            class="absolute right-0 -z-20 h-full max-md:hidden max-lg:-right-24"
-          />
-        </div>
+          {% endfor %}
+        {% endif %}
       </div>
       <div class="flex items-center gap-5 absolute bottom-10 right-10">
         <button
