--- a/templates/checkout/index.html.twig
+++ b/templates/checkout/index.html.twig
@@ -110,52 +110,33 @@
           >
             {# <!--PRODUCT ITEMS--> #}
             <div class="w-full flex flex-col gap-4">
-              <div class="flex items-center justify-between">
-                {# <!--LEFT--> #}
-                <div class="flex items-center gap-2">
-                  <div class="w-max">
-                    <img
-                      src="/im0.jpg"
-                      alt=""
-                      class="w-[70px] h-[70px] rounded-md -z-4"
-                    />
+              {% for item in checkoutCart %}
+                <div class="flex items-center justify-between">
+                  {# <!--LEFT--> #}
+                  <div class="flex items-center gap-2">
+                    <div class="w-max">
+                      <img
+                        src="{{  asset('/images/products/' ~ item.product.getImages()[0].imageName) }}"
+                        alt=""
+                        class="w-[70px] h-[70px] rounded-md -z-4"
+                      />
+                    </div>
+                    <div class="flex flex-col">
+                      <span class="text-xs font-semibold"
+                        >{{ item.product.name }}</span
+                      >
+                      <span class="text-[#8080808e]">{{ (item.product.price / 100) | format_currency('XAF') }} x {{ item.quantity }}</span>
+                    </div>
                   </div>
-                  <div class="flex flex-col">
-                    <span class="text-xs font-semibold"
-                      >COSTUME AFRICAIN SUPER</span
-                    >
-                    <span class="text-[#8080808e]">35.000 x 2</span>
-                  </div>
+                  {# <!--RIGHT--> #}
+                  <span class="text-xs font-semibold">{{ (item.totalPerItem / 100) | format_currency('XAF') }}</span>
                 </div>
-                {# <!--RIGHT--> #}
-                <span class="text-xs font-semibold">70.000 FCFA</span>
-              </div>
-
-              <div class="flex items-center justify-between">
-                {# <!--LEFT--> #}
-                <div class="flex items-center gap-2">
-                  <div class="w-max">
-                    <img
-                      src="/im11.jpg"
-                      alt=""
-                      class="w-[70px] h-[70px] rounded-md -z-10"
-                    />
-                  </div>
-                  <div class="flex flex-col">
-                    <span class="text-xs font-semibold"
-                      >COSTUME AFRICAIN SUPER</span
-                    >
-                    <span class="text-[#8080808e]">30.000 x 3</span>
-                  </div>
-                </div>
-                {# <!--RIGHT--> #}
-                <span class="text-xs font-semibold">90.000 FCFA</span>
-              </div>
+              {% endfor %}
             </div>
             {# <!--TOTAL--> #}
             <div class="w-full flex items-center justify-between">
               <span class="text-lg font-semibold">Total</span>
-              <span class="text-lg font-bold">160.000 FCFA</span>
+              <span class="text-lg font-bold">{{ (finalAmount / 100) | format_currency('XAF') }}</span>
             </div>
           </div>
         </div>
